# Xhartlet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  general.yml  tests.yml
adapters/: Cargo.toml
adapters/src/common/: mod.rs
adapters/src/user/: mod.rs
adapters/src/user/presenters/: cli.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/common/: mod.rs
application/src/interfaces/: mod.rs
application/src/interfaces/common/: cryptography.rs  error.rs
application/src/interfaces/gateways/: mod.rs  user.rs
application/src/interfaces/repositories/: mod.rs
application/src/repositories/: identifier.rs  user.rs
application/src/use_cases/: mod.rs  use_case.rs
application/src/use_cases/user/: create.rs  gateway.rs  mod.rs  register.rs  signup.rs
cli/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/common/: abstract_present.rs
crates/adapters/src/cryptography/: bcrypt.rs
crates/adapters/src/databases/in_memory/: user.rs
crates/adapters/src/user/: controller.rs  gateway.rs  mod.rs  presenters.rs
crates/application/src/common/: abstract_use_case.rs  mod.rs
crates/application/src/use_cases/user/: abstract_repository.rs  mod.rs  register.rs
crates/database/: Cargo.toml
crates/database/src/in_memory/: user.rs
crates/domain/src/common/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: cli.rs
crates/web/: Cargo.toml
crates/web/migrations/: 20240427170057_create_registration_table.sql
crates/web/scripts/: init_db.sh
crates/web/src/: api.rs
crates/web/src/api/: health_check.rs  register.rs
crates/web/tests/api/: register.rs
database/: Cargo.toml
database/src/in_memory/: user.rs
docs/: note.md  structurizr.sh
docs/dir/: workspace.json
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/user/: mod.rs
domain/src/user/value_objects/: mod.rs
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/repositories/in_memory/: user.rs
framework/src/ui/: cli.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/controller/: user.rs
infrastructure/src/database/: mod.rs
infrastructure/src/interfaces/common/: present.rs
infrastructure/src/persistence/: mod.rs
infrastructure/src/persistence/gateways/: user.rs
infrastructure/src/persistence/repositories/: user.rs
infrastructure/src/presenter/cli/: user.rs
infrastructure/src/presenter/controller/: user.rs
infrastructure/src/presenter/model/: user.rs
infrastructure/src/presenter/presenter/: mod.rs
infrastructure/src/presenter/presenter/cli/: user.rs
infrastructure/src/user/: controller.rs  gateway.rs  mod.rs
infrastructure/src/user/presenters/: cli.rs
interface/: Cargo.toml
interface/src/user/: controller.rs  model.rs
interface/src/user/presenters/: cli.rs
src/: lib.rs
src/domain/: Cargo.toml  mod.rs
src/domain/aggregates/: history.rs  intrument.rs  market.rs  mod.rs  order_book.rs  position.rs
src/domain/common/: mod.rs
src/domain/entities/: account.rs  candle.rs  mod.rs  order.rs  position.rs  symbol.rs  trade.rs  user.rs  user_account.rs
src/domain/src/: lib.rs
src/domain/src/common/: mod.rs
src/domain/src/common/errors/: error.rs  mod.rs
src/domain/src/common/value_objects/: mod.rs  price.rs  volume.rs
src/domain/src/instrument/: mod.rs
src/domain/src/instrument/entities/: candle.rs  history.rs  mod.rs
src/domain/src/instrument/value_objects/: instrument_id.rs  mod.rs  ticker.rs  timeframe.rs
src/domain/src/market/: mod.rs
src/domain/src/market/value_objects/: market_id.rs  mod.rs
src/domain/src/session/: mod.rs
src/domain/src/session/entities/: account.rs  (+3 more)
src/domain/src/user/: mod.rs
src/domain/value_objects/: id.rs  mod.rs  order.rs  order_kind.rs  order_status.rs  position.rs  position_kind.rs  position_status.rs  price.rs  quantity.rs  ticker.rs  timeframe.rs  trade_kind.rs
web/: Cargo.toml
web/src/: api.rs  server.rs
web/src/api/: register.rs
web/tests/: health_check.rs
web/tests/api/: health_check.rs  helpers.rs  main.rs  register.rs
(+9 files in other folders)
