[package]
name = "xhartlet"
version = "0.1.0"
authors = ["Alex Ngo <>"]
edition = "2021"
publish = false

[[bin]]
name = "xhartlet-cli"
path = "src/bin/cli.rs"

[dependencies]
xhartlet-ui = "0.1.0"

[workspace]
members = [
 "domain",
 "application",
 "adapters",
 "database",
 "ui",
 "web",
]

[patch.crates-io]
xhartlet-domain         = { path = "domain"         }
xhartlet-application    = { path = "application"    }
xhartlet-adapters       = { path = "adapters"       }
xhartlet-database       = { path = "database"       }
xhartlet-ui             = { path = "ui"             }
xhartlet-web            = { path = "web"            }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
