[package]
name = "xhartlet"
version = "0.1.0"
authors = ["Alex Ngo <>"]
edition = "2021"
publish = false

[[bin]]
name = "xhartlet-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "xhartlet-api"
path = "src/bin/api.rs"

[dependencies]
xhartlet-ui  = "0.1.0"
xhartlet-web = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }

[workspace]
members = [
 "crates/domain",
 "crates/application",
 "crates/adapters",
 "crates/database",
 "crates/ui",
 "crates/web",
]

[patch.crates-io]
xhartlet-domain         = { path = "crates/domain"         }
xhartlet-application    = { path = "crates/application"    }
xhartlet-adapters       = { path = "crates/adapters"       }
xhartlet-database       = { path = "crates/database"       }
xhartlet-ui             = { path = "crates/ui"             }
xhartlet-web            = { path = "crates/web"            }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
