[package]
name = "xhartlet-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xhartlet-interface = "0.1.0"
xhartlet-domain = "0.1.0"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
shlex = "1.3.0"
